--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,17 @@ services:
     ports:
       - "3307:3306"
     # network_mode: "host"
+  testmysql:
+    image: mysql:8.1
+    restart: unless-stopped
+    tmpfs: /var/lib/mysql
+    # volumes:
+    #   - ./mysql:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE=laravel_test
+      - MYSQL_ALLOW_EMPTY_PASSWORD=true
+    ports:
+      - "3308:3306"
   laravel:
     # image: php:8.2-apache
     build: .
@@ -19,6 +30,7 @@ services:
     network_mode: "host"
     depends_on:
       - mysql
+      - testmysql
     command: >
       sh -c "cd /laragigs &&
             echo '' && echo '>>> COMPOSER INSTALL <<<' && echo '' &&
